[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# TODO: Author, version, descriptions etc.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"

# Enable a small amount of optimisation in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3
