# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tikan"
version = "0.1.0"
authors = ["Jordan Ellis Coppard <$(printf 'amMrZ2l0QHd6Lmh0Cg==' | base64 -d)>"]

edition = "2021"
rust-version = "1.71.0"

readme = "README.md"
license = "BSD-3-Clause"
license-file = "LICENCE"

description = "Chess and Fog of War Chess implemented in Aztec's ZK language: Noir."
repository = "https://github.com/tsujp/tikan"
homepage = "TODO"
documentation = "TODO"

# Describe package: max 5, anything.
keywords = ["chess", "zero-knowledge", "noir-lang", "wasm", "game"]

# Crate.io slugs for categorisation: max 5, https://crates.io/category_slugs
# The `cryptography::cryptocurrencies` category name sucks, there's no CURRENCY
#   here and there's nothing to sell.
categories = ["games", "cryptography", "cryptography::cryptocurrencies", "wasm"]

[[bin]]
name = "frontend"
path = "src/bin/tikan.rs"

# [[bin]]
# name = "worker"
# path = "src/bin/coin_flip.rs"

# [workspace]
# members = [
#   "coin_flip",
#   "coin_flip_worker"
# ]

# TODO: Non-JavaScript environments for threading for true portability.
# Currently Tikan is WASM only within a JavaScript environment (browser), set
#   features as such.
[features]
default = ["console_error_panic_hook"]
# futures = ["gloo-worker/futures"]

[dependencies]
bevy = "0.11.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
# coin_flip = { path = "coin_flip" }
gloo-console = "0.2.3"
wasm_thread = "0.2.0"

# Enable a small amount of optimisation in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3
