# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tikan"
version = "0.1.0"
authors = ["Jordan Ellis Coppard <$(printf 'amMrZ2l0QHd6Lmh0Cg==' | base64 -d)>"]

edition = "2021"
rust-version = "1.71.0"

license = "BSD-3-Clause"
license-file = "LICENCE"
readme = "README.md"

documentation = "TODO"
homepage = "TODO"
repository = "https://github.com/tsujp/tikan"
description = "Chess and Fog of War Chess implemented in Aztec's ZK language: Noir."

# Describe package: max 5, anything.
keywords = ["chess", "zero-knowledge", "noir-lang", "wasm", "game"]

# Crate.io slugs for categorisation: max 5, https://crates.io/category_slugs
# The `cryptography::cryptocurrencies` category name sucks, there's no CURRENCY
#   here and there's nothing to sell.
categories = ["games", "cryptography", "cryptography::cryptocurrencies", "wasm"]

[[bin]]
name = "frontend"
path = "src/bin/tikan.rs"

# [[bin]]
# name = "worker"
# path = "src/bin/coin_flip.rs"

# [workspace]
# members = [
#   "coin_flip",
#   "coin_flip_worker"
# ]

# TODO: Non-JavaScript environments for threading for true portability.
# Currently Tikan is WASM only within a JavaScript environment (browser), set
#   features as such.
[features]
default = ["console_error_panic_hook"]
# futures = ["gloo-worker/futures"]

[dependencies]
# bevy = "0.11.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
crossbeam-channel = "0.5.8"
# coin_flip = { path = "coin_flip" }
log = "0.4.19"
rand = "0.8.5"
# wasm-bindgen = "0.2.87"
wasm_thread = "0.2.0"

[dependencies.bevy]
version = "0.11.0"
default-features = false
# Features with explanations: https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L62
features = [
  "bevy_render",
  "bevy_ui",
  "bevy_asset",
  "bevy_winit",
  "webgl2",
  "default_font", # TODO: Remove later, replacing with custom?
]

# Enable a small amount of optimisation in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimisations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3

# Release-mode optimisations
[profile.release]
opt-level = "z" # Before Noir backend, "z" better than "s"
lto = "fat" # Before Noir backend, "fat" better than "thin"
codegen-units = 1
